api-server/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: stock-prediction-api-service
spec:
  type: NodePort
  selector:
    app: stock-prediction-api
  ports:
    - port: 8000
      targetPort: 8000
      nodePort: 30080
