api-server/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  namespace: fastapi
spec:
  rules:
    - host: api.mynspluto.local.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: stock-prediction-api-service
                port:
                  number: 8000
#kubectl patch svc airflow-webserver -n airflow -p '{"spec": {"type": "NodePort", "ports": [{"port": 8080, "targetPort": 8080, "nodePort": 31000}]}}'
# /etc/hosts
# 127.0.0.1 airflow.example.com
